[package]
name = "octravpn-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "OctraVPN node daemon: WireGuard + chain registration + onion forwarding."

[[bin]]
name = "octravpn-node"
path = "src/main.rs"

[dependencies]
octravpn-core = { path = "../octravpn-core" }
# Used by the Tailscale-interop preauth-minter surface (`mesh
# mint-preauth` CLI + `POST /admin/preauth` HTTP). See the
# `tailscale_interop` module + `crates/octravpn-mesh/src/headscale_bridge.rs`
# for the contract.
octravpn-mesh = { path = "../octravpn-mesh" }
# In-process historical analytics indexer (task #231). The node spawns
# the indexer + HTTP surface alongside the control plane when the
# `[analytics]` config block is present. Path dep (workspace member);
# no transitive heavy deps — the analytics crate is in-memory only.
octravpn-analytics = { path = "../octravpn-analytics" }
# AmneziaWG-style WG handshake obfuscation lives in the `tun` crate
# (next to the TUN device wrapper) as a UDP send/recv shim. The node's
# tunnel datapath wires it into the WG `Server` when
# `[tunnel.amnezia].enabled = true`. See
# `docs/security/validator-hardening.md` § Layer 1.
octravpn-tun = { path = "../octravpn-tun" }
# Obfs4-modelled UDP transport plug-point (4-layer shielding pack,
# layer 2). Linked unconditionally so the config block can be
# validated at boot; the `Obfs4Transport` instance is only constructed
# when `[tun.transport].kind = "obfs4"`. See
# `docs/operators/obfs4-bridge.md`.
octravpn-obfs4 = { path = "../octravpn-obfs4" }
# Embedded `headscale` admin CLI surface. The sibling repo exposes a
# `[lib]` (`headscale_cli`) with an `AdminCmd` clap subcommand enum
# plus a `dispatch(connect, cmd)` entry-point; we link it as a path
# dep so `octravpn-node headscale [users|nodes|preauthkeys|policy|
# tailnet] …` produces byte-identical output to the standalone
# `headscale` binary. The standalone binary is still built/published
# by headscale-rs — this dep just folds the *operator-facing* surface
# into our single-binary install. See `docs/operators/cli-migration.md`.
headscale-cli = { path = "../../../headscale-rs/headscale-cli" }

anyhow      = { workspace = true }
async-trait = { workspace = true }
axum        = { workspace = true }
base64      = { workspace = true }
boringtun   = { workspace = true }
bytes       = { workspace = true }
clap        = { workspace = true }
curve25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
hex         = { workspace = true }
hmac        = "0.12"
parking_lot = { workspace = true }
rand        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sha2        = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
# `tokio-stream` bridges a `broadcast::Receiver` into a `Stream` so the
# SSE endpoint can wrap it with `axum::response::Sse`. The `sync`
# feature enables `wrappers::BroadcastStream`.
tokio-stream = { version = "0.1", features = ["sync"] }
# Pulled in for `StreamExt::map` when adapting the broadcast stream into
# the `Result<SseEvent, Infallible>` shape axum's `Sse::new` requires.
futures-util = { version = "0.3", default-features = false }
toml        = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
x25519-dalek = { workspace = true }
zeroize     = { workspace = true }
secrecy     = { workspace = true }
# Atomic file writes for P1-6 (seal-keys / unseal-keys) and P1-8/9 (the
# receipt journal). Used to write the sealed envelope + journal via
# tempfile + rename so a crash mid-write can't corrupt the destination.
tempfile    = { workspace = true }
# #232: `cli_ops::probe_remote_health` hits `GET /health` on the running
# daemon's localhost listener as a curl-free replacement for the
# runbook's `curl -sS http://localhost:51821/health | jq` step. The
# workspace reqwest is already built with `rustls-tls`; pulling it in
# here is a no-op for the lockfile (reqwest is already in the resolved
# graph via other workspace members).
reqwest     = { workspace = true }
# Perf-Data-Plane #7: SO_REUSEPORT multi-queue UDP. socket2 is already
# in the lock graph (tokio + reqwest both pull it transitively); we
# declare it explicitly so the SO_REUSEPORT bind path in tunnel.rs has
# a stable surface to call. Gated on Linux/FreeBSD; macOS uses a single
# tokio bind because BSD-style SO_REUSEPORT doesn't flow-hash.
# `all` feature is required for set_reuse_port + reuse-address knobs.
socket2     = { version = "0.5", features = ["all"] }

[dev-dependencies]
octravpn-mesh = { path = "../octravpn-mesh", features = ["test-helpers"] }
# `policy_e2e.rs` exercises the admin CRUD surface, which lives behind
# the `admin` feature in `headscale-api`. The mesh crate links to
# `headscale-api` with `default-features = false` (it only wants the
# wire layer); we activate the admin feature here as a dev-dep so the
# integration test can reach `admin::router` / `admin::AdminState`.
headscale-api = { path = "../../../headscale-rs/headscale-api", default-features = false, features = ["admin"] }
chrono = { version = "0.4", features = ["serde"] }
# `tower::ServiceExt::oneshot` drives the merged axum::Router in the
# `tailscale_wire_integration` test without binding a real port.
tower = { version = "0.5", features = ["util"] }
# `BodyExt::frame` for incremental streaming-body reads in the PR 3
# `stream_true_emits_chunk_on_registry_change` integration test.
http-body-util = "0.1"
# `tokio::time::pause`/`advance` for the PR 3 streaming test —
# workspace `tokio = { features = ["full"] }` would include this, but
# integration tests need the feature surfaced via dev-deps to keep
# the unification reliable.
tokio = { version = "1", features = ["full", "test-util"] }
# TLS client side for the raw_tls integration test: we drive a real
# `tokio-rustls` client through `serve_raw_tls` on an ephemeral port
# and assert that (a) `GET /key` routes through the inner axum router
# and (b) `POST /ts2021` reaches `noise::drive_ts2021` over the
# unbuffered TLS stream.
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
criterion = { version = "0.5", features = ["html_reports"] }
# wireguard_throughput.rs benches WG primitives without standing up
# Tunn instances (those are module-private).
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
# `tailscale_wire_integration::ts2021_be_transport_round_trips_record`
# drives a full snow IK handshake in-process so it can extract the
# split keys and feed them to `BeTransport` from the consumer side.
# The `risky-raw-split` feature exposes
# `HandshakeState::dangerously_get_raw_split` (already enabled in
# headscale-api; we re-declare here so the dev-dep resolves the same
# feature set).
snow = { version = "0.9.6", features = ["risky-raw-split"] }
# `tailscale_wire_integration::stream_true_emits_chunk_on_registry_change`
# decodes the `Stream=true` MapResponse stream the same way upstream
# does: `binary.LittleEndian.Uint32(siz[:4])` then
# `zstdframe.AppendDecode`. Wall 5 fix — see
# `docs/tailscale-interop-blocker.md` 2026-05-19 §"Wall 5 closed".
zstd = { version = "0.13", default-features = false }
# `headscale_cli_passthrough.rs` drives both the embedded
# `octravpn-node headscale …` surface and the standalone `headscale`
# binary through `assert_cmd` so it can diff their stdout/stderr/exit
# byte-for-byte. assert_cmd 2.x is already in the lock graph (e.g. via
# octravpn-core dev-deps); pinning the workspace-resolved version here.
assert_cmd = "2"
# `headscale_cli_passthrough.rs` needs the path to the standalone
# `headscale` bin so it can shell out for the byte-diff comparison.
# `escargot` builds the sibling crate's binary on demand — same
# technique upstream `clap` uses in its CLI tests.
escargot = "0.5"

[lints]
workspace = true

[[bench]]
name = "settle_throughput"
harness = false
path = "benches/settle_throughput.rs"

[[bench]]
name = "wireguard_throughput"
harness = false
path = "benches/wireguard_throughput.rs"

# Perf-4: HFHE-2 batched PVAC sidecar RPC. Measures the IPC-framing
# delta between (a) legacy 3-call serial shadow-blob emission and
# (b) the new single-call `receipt_shadow` op. Skip-if-no-binary —
# requires `pvac-sidecar/octra-pvac-sidecar` to exist (or
# `$PVAC_SIDECAR_BIN` to point at one).
[[bench]]
name = "pvac_shadow"
harness = false
path = "benches/pvac_shadow.rs"

# Perf-6: audit-log boot-replay (full HMAC walk vs. skip-to-tip).
# Plain `fn main()` harness — the two paths' timescales differ by
# >100x so criterion's plot output is unhelpful.
[[bench]]
name = "audit_boot_replay"
harness = false
path = "benches/audit_boot_replay.rs"

# cargo-deb metadata: `cargo deb -p octravpn-node` produces an installable .deb.
[package.metadata.deb]
name = "octravpn-node"
maintainer = "OctraVPN contributors <dev@octra.org>"
copyright = "2026, OctraVPN contributors"
license-file = ["../../LICENSE", "0"]
extended-description = """
OctraVPN validator-side daemon: registers as an Octra validator-VPN
node, runs the WireGuard data plane and HTTP control plane, signs
bandwidth receipts, and settles via the on-chain OctraVPN program.
"""
section = "net"
priority = "optional"
depends = "libc6 (>= 2.31)"
assets = [
  ["target/release/octravpn-node", "/usr/local/bin/", "755"],
  ["../../deploy/systemd/octravpn-node.service", "/lib/systemd/system/", "644"],
  ["../../deploy/systemd/octravpn-attest.timer", "/lib/systemd/system/", "644"],
  ["../../deploy/systemd/octravpn-attest.service", "/lib/systemd/system/", "644"],
  ["../../README.md", "/usr/share/doc/octravpn-node/README.md", "644"],
  ["../../docs/install.md", "/usr/share/doc/octravpn-node/install.md", "644"],
]
maintainer-scripts = "../../deploy/debian/"
conf-files = ["/etc/octravpn/node.toml"]

# cargo-generate-rpm metadata: `cargo generate-rpm -p octravpn-node`.
[package.metadata.generate-rpm]
name = "octravpn-node"
summary = "OctraVPN validator-side node daemon"
license = "MIT OR Apache-2.0"
url = "https://github.com/octra-labs/octravpn"
requires = []
post_install_script = """
getent group octravpn >/dev/null || groupadd --system octravpn
getent passwd octravpn >/dev/null || useradd --system --gid octravpn --no-create-home --shell /usr/sbin/nologin octravpn
install -d -o octravpn -g octravpn -m 0750 /etc/octravpn /var/lib/octravpn /var/log/octravpn
systemctl daemon-reload >/dev/null 2>&1 || true
setcap cap_net_admin,cap_net_bind_service+ep /usr/local/bin/octravpn-node >/dev/null 2>&1 || true
"""
pre_uninstall_script = """
systemctl stop octravpn-node >/dev/null 2>&1 || true
"""
assets = [
  { source = "target/release/octravpn-node", dest = "/usr/local/bin/octravpn-node", mode = "0755" },
  { source = "deploy/systemd/octravpn-node.service", dest = "/usr/lib/systemd/system/octravpn-node.service", mode = "0644" },
  { source = "deploy/systemd/octravpn-attest.timer", dest = "/usr/lib/systemd/system/octravpn-attest.timer", mode = "0644" },
  { source = "deploy/systemd/octravpn-attest.service", dest = "/usr/lib/systemd/system/octravpn-attest.service", mode = "0644" },
]
