[package]
name = "octravpn-kani"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
octravpn-core = { path = "../../crates/octravpn-core" }
sha2 = "0.10"
ed25519-dalek = "2"
hex = "0.4"

[features]
default = []
# When running under `cargo kani`, this feature is auto-enabled.
kani = []
