[package]
name = "octravpn-e2e"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
octravpn-core = { path = "../../crates/octravpn-core" }
octra-mock-rpc = { path = "../../../octra-foundry/crates/octra-mock-rpc" }

anyhow = { workspace = true }
curve25519-dalek = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
x25519-dalek = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
