[package]
name = "octravpn-mock-rpc"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "octravpn-mock-rpc"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
octravpn-core = { path = "../../crates/octravpn-core" }

anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
curve25519-dalek = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
